Fix list item alignment

--- a/app/assets/stylesheets/components/_home_feature.scss
+++ b/app/assets/stylesheets/components/_home_feature.scss
@@ -50,7 +50,7 @@
   li {
     padding: $baseline-unit*2 $baseline-unit;
     margin: 0;
-    border-top: 1px solid $home-feature-list-border;
+    border-top: 1px solid lighten($home-feature-list-border, 5%);
     &:first-child {
       border: none;
     }
@@ -59,6 +59,7 @@
   a {
     @extend %type-homepage-headings;
     display: block;
+    margin-bottom: 0;
   }
 
   p {
